tests/data/mini_script/valid/nested_blocks.ms
{
    let outer = 10;
    {
        let inner = outer + 5;
        print inner;
    }
    print outer;
}
