tests/data/mini_script/invalid/hard_nested_recovery.ms
while count < 10 {
    let next = count + 1
    if next == 5 {
        print next;
    else {
        print 0;
    }
    count = next;
}
